--- a/unit1.html
+++ b/unit1.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-    <header class="hero-bg">
-        <div class="header">
+    <header>
+        <div class="header-box">
             <div class="profile-box">
                 <img id="profile-avatar" src="avatar.jpg">
                 <p id="profile-name">石老师英语</p>
