import and export from data.js

--- a/unit1.html
+++ b/unit1.html
@@ -132,7 +132,6 @@
             <span>更多资源：小红书账号shlshyy</span>
         </p>
     </footer>
-    <script src="data.js"></script>
-    <script src="unit1.js"></script>
+    <script src="unit1.js" type="module"></script>
 </body>
 </html>
