add font awesome cdn

--- a/unit1.html
+++ b/unit1.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+    <title>Unit 1 We're friends - 英语互动学习乐园</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit 1 We're friends - 英语互动学习乐园</title>
-    <!-- font  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="unit1.css">
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- firework effect library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -17,7 +20,7 @@
         <div class="header-box">
             <img class="profile-avatar" src="images/avatar.jpg" alt="an avatar of teacher shi">
             <p class="profile-name">石老师英语</p>
-            <img class="burger" src="images/burger.png">
+            <i class="fa-solid fa-bars"></i>
         </div>
     </header>
 
