add index.html and parameter for grade, semester and unit

--- a/text.html
+++ b/text.html
@@ -87,8 +87,7 @@
                     <i class="fas fa-arrow-left"></i> 上一页
                 </button>
                 
-                <div class="page-indicator">
-                    <p> <span id="currentPage">1</span> / 4 </p>
+                <div class="page-indicator" id="page-indicator">
                 </div>
 
                 <button class="next-page-btn" id="next-page-btn">
